--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "description": "",
   "dependencies": {
     "@types/ws": "^8.5.13",
+    "express": "^4.21.1",
     "typescript": "^5.7.2",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
