--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node ./dist/index.js",
     "dev": "tsc -b && node ./dist/index.js"
   },
   "keywords": [],
@@ -11,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@types/ws": "^8.5.13",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "typescript": "^5.7.2",
     "ws": "^8.18.0"
